// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render an empty component 1`] = `
<C360Header
  backButtonOnPress={[Function]}
  showBackButton={false}
  style={
    Object {
      "alignCenter": Object {
        "alignItems": "center",
      },
      "alignFlexEnd": Object {
        "alignItems": "flex-end",
      },
      "backButtonStyle": Object {
        "color": "white",
        "fontWeight": "bold",
        "paddingLeft": 10,
      },
      "badgeStyle": Object {
        "backgroundColor": "#FFDB00",
        "height": 10,
        "width": 10,
      },
      "flexColumn": Object {
        "flexDirection": "column",
      },
      "fontSize10": Object {
        "fontSize": 10,
      },
      "header": Object {
        "alignItems": "center",
        "backgroundColor": "#007DBA",
        "borderBottomWidth": 0,
        "elevation": 0,
      },
      "headerIcon": Object {
        "justifyContent": "center",
      },
      "headerLogoStyle": Object {
        "marginLeft": 10,
      },
      "itemSeparatorStyle": Object {
        "backgroundColor": "#C9C9C9",
        "height": 1,
        "opacity": 0.4,
      },
      "mainText": Object {
        "color": "#444444",
      },
      "marginRight25": Object {
        "marginRight": 25,
      },
      "menuTriggerStyles": Object {
        "TriggerTouchableComponent": [Function],
        "triggerOuterWrapper": Object {
          "marginRight": 10,
        },
        "triggerText": Object {
          "color": "white",
        },
        "triggerTouchable": Object {
          "activeOpacity": 0.6,
          "underlayColor": "transparent",
        },
        "triggerWrapper": Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
        },
      },
      "moreNotificationButtonStyle": Object {
        "paddingBottom": 15,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 25,
      },
      "moreNotificationTextStyle": Object {
        "color": "#007DBA",
        "fontSize": 13,
        "fontWeight": "bold",
      },
      "notificationHierarchy": Object {
        "color": "#444444",
        "fontWeight": "bold",
      },
      "notificationRow": Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingBottom": 2,
        "paddingLeft": 2,
        "paddingRight": 2,
        "paddingTop": 2,
      },
      "notificationTextView": Object {
        "flexDirection": "column",
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      "popoverProps": Object {
        "placement": "bottom",
        "preferredPlacement": "bottom",
      },
      "profileAvatar": Object {
        "borderRadius": 20,
        "height": 40,
        "marginRight": 10,
        "width": 40,
      },
      "profileMenuView": Object {
        "alignItems": "center",
        "borderBottomColor": "#C9C9C9",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 2,
        "paddingBottom": 12,
      },
      "subText": Object {
        "color": "#939393",
        "fontSize": 11,
      },
      "timeStamp": Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "width": 40,
      },
      "whiteText": Object {
        "color": "white",
      },
    }
  }
  title="Back"
  virtual={undefined}
/>
`;

exports[`renders a header with the back button enabled 1`] = `
<C360Header
  backButtonOnPress={[Function]}
  showBackButton={true}
  style={
    Object {
      "alignCenter": Object {
        "alignItems": "center",
      },
      "alignFlexEnd": Object {
        "alignItems": "flex-end",
      },
      "backButtonStyle": Object {
        "color": "white",
        "fontWeight": "bold",
        "paddingLeft": 10,
      },
      "badgeStyle": Object {
        "backgroundColor": "#FFDB00",
        "height": 10,
        "width": 10,
      },
      "flexColumn": Object {
        "flexDirection": "column",
      },
      "fontSize10": Object {
        "fontSize": 10,
      },
      "header": Object {
        "alignItems": "center",
        "backgroundColor": "#007DBA",
        "borderBottomWidth": 0,
        "elevation": 0,
      },
      "headerIcon": Object {
        "justifyContent": "center",
      },
      "headerLogoStyle": Object {
        "marginLeft": 10,
      },
      "itemSeparatorStyle": Object {
        "backgroundColor": "#C9C9C9",
        "height": 1,
        "opacity": 0.4,
      },
      "mainText": Object {
        "color": "#444444",
      },
      "marginRight25": Object {
        "marginRight": 25,
      },
      "menuTriggerStyles": Object {
        "TriggerTouchableComponent": [Function],
        "triggerOuterWrapper": Object {
          "marginRight": 10,
        },
        "triggerText": Object {
          "color": "white",
        },
        "triggerTouchable": Object {
          "activeOpacity": 0.6,
          "underlayColor": "transparent",
        },
        "triggerWrapper": Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
        },
      },
      "moreNotificationButtonStyle": Object {
        "paddingBottom": 15,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 25,
      },
      "moreNotificationTextStyle": Object {
        "color": "#007DBA",
        "fontSize": 13,
        "fontWeight": "bold",
      },
      "notificationHierarchy": Object {
        "color": "#444444",
        "fontWeight": "bold",
      },
      "notificationRow": Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingBottom": 2,
        "paddingLeft": 2,
        "paddingRight": 2,
        "paddingTop": 2,
      },
      "notificationTextView": Object {
        "flexDirection": "column",
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      "popoverProps": Object {
        "placement": "bottom",
        "preferredPlacement": "bottom",
      },
      "profileAvatar": Object {
        "borderRadius": 20,
        "height": 40,
        "marginRight": 10,
        "width": 40,
      },
      "profileMenuView": Object {
        "alignItems": "center",
        "borderBottomColor": "#C9C9C9",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 2,
        "paddingBottom": 12,
      },
      "subText": Object {
        "color": "#939393",
        "fontSize": 11,
      },
      "timeStamp": Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "width": 40,
      },
      "whiteText": Object {
        "color": "white",
      },
    }
  }
  title="Load Details"
  virtual={undefined}
/>
`;
